# beton

./: .clang-format  CMakeLists.txt  README.md  build.sh  plot.py  setup_dev_env.sh  t
cmake/: EmbedAsRawString.cmake
kernels/: advanced.cl  bitonic.cl  local.cl  naive.cl  stupid.cl
src/: bitonic_sort.hpp  bitonic_sort_cpu.cpp  cpu_sort.cpp  cpu_sort.hpp  gpu_advanced.cpp  gpu_local.cpp  gpu_local_naive.cpp  gpu_naive.cpp  gpu_sort.cpp  gpu_sort.hpp  interface.hpp  main.cpp  opencl_utils.hpp  stupid.cpp
tests/: CMakeLists.txt  correctness.cpp  main.cpp  performance.cpp  tests.hpp
